Fix bug #68549 (Timezones and offsets are not properly used when working with dates)

Particularly when setting timestamps or changing timezones during DST changes